	  do_right(), do_delete(), do_backspace(), do_search(),
	  do_research(), do_replace_loop(), do_find_bracket(), and
	  edit_refresh().  New functions do_left_void(),
	  do_right_void(), need_horizontal_update(),
	  need_vertical_update(), edit_scroll(), and edit_redraw().  All
	  of these functions but the first two require the previous
	  versions of current and/or placewewant as parameters.  Also
	  rename the int refresh in do_delete() and do_backspace() to
	  do_refresh so as not to conflict with refresh(). (DLR)
	- Add some comments better explaining what is disabled in
	  restricted mode and why. (DLR)
	- Since KEEP_CUTBUFFER is only used in cut.c, make it a static
	  variable in cut.c instead of a flag, and unset it in other
	  files via the new function cutbuffer_reset(). (DLR)
	- Add the ability to change the characters used to display the
	  beginning characters of tabs and spaces via the rcfile entry
	  "whitespace".  This is disabled if nanorc support is disabled
	  or if we're in tiny mode.  Displaying the new characters is
	  toggled on and off by Meta-P; the default is on. (Mike
	  Frysinger; minor changes and adaptations by DLR)
	- Add the ability to change the closing punctuation and closing
	  brackets used to control justification, via the rcfile
	  entries "punct" and "brackets". (DLR)
	- Translation updates (see po/ChangeLog for details).
- files.c:
  add_open_file()
	- Rearrange the NANO_SMALL #ifdef so that the code to set the
	  MODIFIED flag in open_files->flags is included only once.
	  (DLR)
  write_marked()
	- Call write_file() with nonamechange set to TRUE so that we
	  don't erroneously change the current filename when writing a
	  selection, and don't take a nonamechange parameter anymore
	  since we don't use it. (DLR)
  do_writeout()
	- Refactor so that no recursion is needed if we try to exit with
	  a modified file that has no name when TEMP_OPT is set. (DLR)
	- Add spaces to the ends of the "Overwrite" and "Different Name"